<resources>
    <string name="app_name">ohurocchi</string>
    <string name="start">START</string>
    <string name="welcome">ようこそ新しい画面へ</string>
    <string name="back">戻る</string>
    <string name="woman">woman</string>
    <string name="bathbtn">お風呂に入った</string>
    <string name="ohurobtn">お風呂に入った</string>
    <string name="age">年齢：22才</string>
    <string name="name">名前：</string>
    <string name="favorability">好感度：普通</string>
    <string name="Logo">おふろっち</string>
    <string name="todo">TODO</string>
    <string name="today">2022/10/14</string>
    <string name="td">TODO</string>
    <string name="Todo">TODO</string>
    <string name="toDo">TODO</string>
    <string name="chara">キャラ</string>
    <string name="shop">衣装購入</string>
    <string name="home">ホーム</string>
    <string name="setting">設定</string>
    <string name="tooo">TODO</string>
    <string name="mypage">マイページ</string>
    <string name="sound">サウンド</string>
    <string name="background">背景変更</string>
    <string name="bathlog">入浴ログ</string>
    <string name="dressup">着せ替え</string>

    <string-array name="month_array">
    <item>1月</item>
    <item>2月</item>
    <item>3月</item>
    <item>4月</item>
    <item>5月</item>
    <item>6月</item>
    <item>7月</item>
    <item>8月</item>
    <item>9月</item>
    <item>10月</item>
    <item>11月</item>
    <item>12月</item>
    </string-array>
    <string name="huro">風呂メイド1</string>
    <string name="yen">25Pt</string>
    <string name="unrock">アンロック</string>
    <string name="image">TODO</string>
    <string name="dress1">TODO</string>
    <string name="dress2">TODO</string>
    <string name="dress3">TODO</string>
    <string name="dress4">TODO</string>
    <string name="ohurocchi">おふろっち</string>
    <string name="Today">2022/10/14</string>
    <string name="nickname">ニックネーム</string>
    <string name="backbtn">戻る</string>
    <string name="nameframe">Name</string>
    <string name="change">変更する</string>
    <string name="modoru">戻る</string>
    <string name="dressup1">着せ替え</string>
    <string name="backbtn3">戻る</string>
    <string name="namechenge">名前変更</string>
    <string name="huroname">露天風呂</string>
    <string name="tekiyou">適用</string>
    <string name="pulldown">月を選択</string>
    <string name="bg1">background!</string>
    <string name="modoruyo">戻る</string>
    <string name="bariusu">TODO</string>
    <string name="exchange">交換</string>
    <string name="nickname1">ニックネーム</string>
    <string name="cahnge">変更</string>
    <string name="name1"> ニックネームを入力してください</string>
    <string name="com_soon">coming soon...</string>
    <string name="dressexcahngeroom">衣装交換所</string>
    <string name="exchange2">交換</string>
    <string name="bath_btn">入 浴</string>
    <string name="todo5">TODO</string>
</resources>