<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop1">

    <View
        android:id="@+id/view13"
        android:layout_width="299dp"
        android:layout_height="45dp"
        android:background="@drawable/shape"
        android:backgroundTint="#C4FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="700dp"
        android:fontFamily="@font/kosugimaru_regular"
        android:includeFontPadding="false"
        android:shadowColor="#F3F0F0"
        android:shadowDx="1"
        android:shadowDy="1.5"
        android:shadowRadius="5"
        android:text="@string/dressup"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="178dp"
        android:layout_height="258dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:srcCompat="@drawable/adult" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/kosugimaru_regular"
        android:text="@string/huro"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/kosugimaru_regular"
        android:shadowColor="#A14C4C"
        android:text="@string/dressup1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="160dp"
        android:layout_marginTop="400dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:contentDescription="@string/dress1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/adult"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/sexy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:contentDescription="@string/dress2"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/sexy"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="160dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageButton
            android:id="@+id/neautral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:contentDescription="@string/dress3"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/neautral" />

        <ImageButton
            android:id="@+id/sick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:contentDescription="@string/dress4"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/sick" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="700dp"
        android:layout_marginEnd="155dp"
        android:text="@string/backbtn3"
        android:textColor="#212121"
        app:backgroundTint="#ffff4444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />


</androidx.constraintlayout.widget.ConstraintLayout>