<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop1">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/kosugimaru_regular"
        android:gravity="center_horizontal"
        android:paddingTop="11dp"
        android:paddingBottom="0dp"
        android:text="@string/background"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="bold"
        app:backgroundTint="#C4FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".055"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".85" />

    <ImageButton
        android:id="@+id/btnBack2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/boder_ripple"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".10"
        app:srcCompat="@drawable/backbtn"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".40"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        app:srcCompat="@drawable/roten" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/kosugimaru_regular"
        android:gravity="center_horizontal"
        android:paddingTop="7dp"
        android:text="@string/huroname"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold"
        app:backgroundTint="#C4FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default= "percent"
        app:layout_constraintWidth_percent= ".2"
        app:layout_constraintHeight_default= "percent"
        app:layout_constraintHeight_percent= ".08"
        android:background="@drawable/button_round"
        android:fontFamily="@font/kosugimaru_regular"
        android:text="@string/tekiyou"
        android:textColor="#3A3838"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.435" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723">

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/boder_ripple"
            android:contentDescription="@string/dress1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/wafu_pc"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/boder_ripple"
            android:contentDescription="@string/dress2"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/roten_pc"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">


        <ImageButton
            android:id="@+id/imageButton16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/boder_ripple"
            android:contentDescription="@string/dress3"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/huro_pc"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/boder_ripple"
            android:contentDescription="@string/dress4"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/daiyokujo_pc"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>